--- a/public/Login.html
+++ b/public/Login.html
@@ -9,6 +9,10 @@
 <body>
     <div class="Container">
         <div class="Login">
+            <div class="logo">
+                <img src="Logo-removebg-preview.png">
+            </div>
+            <h3>Website</h3>
             <h2>Login</h2>
             <form>
                 <div class="form">
@@ -19,13 +23,13 @@
                     <label for="Password">Password</label>
                     <input type="password" id="password" placebox="Enter your Password" required>
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <button type="submit" class="btn1">Login</button>
             </form>
         </div>
         <div class="rightside">
             <h1>New here?</h1>
             <p1>You are very welcome in this website</p1>
-            <button type="submit" class="btn">Sign up</button>
+            <button type="submit" class="btn2">Sign up</button>
         </div>   
     </div>
 </body>
