--- a/public/Signup.html
+++ b/public/Signup.html
@@ -9,6 +9,9 @@
 <body>
     <div class="Container">
         <div class="leftside">
+            <div class="logo">
+                <img src="Logo-removebg-preview.png">
+            </div>
             <h1>Welcome to Website</h1>
             <p1>You are very welcome in this website</p1>
         </div>
