--- a/public/website.html
+++ b/public/website.html
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="website.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="website.css" />
     <title>Website</title>
-</head>
-<body>
-    <div class="main">
+  </head>
+
+  <body>
+    <div class="top-part">
+      <div class="bgpic">
         <div class="navbar">
-            <div class="headname">
-                <h1>Website</h1>
-            </div>
-            <div class="menu">
-                <ul>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">SHOP</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                    <li><a href="#">PROFILE</a></li>
-                </ul>
-            </div>
+          <div class="headname">
+            <h1>Website</h1>
+          </div>
+          <div class="menu">
+            <ul>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">NEWS</a></li>
+              <li><a href="#">CONTACT</a></li>
+              <li><a href="#">PROFILE</a></li>
+            </ul>
+          </div>
         </div>
         <div class="content">
-            <h1>Website</h1>
-            <h2>Website Description</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio<br>
-                porro illum velit minus iste officia consequatur quasi suscipit<br> 
-                id voluptatum sint alias nemo, mollitia tempora quos animi odio.</p>
+          <h1>Lorem Ipsum</h1>
+          <h2>Lorem Ipsum Description</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio<br />
+            porro illum velit minus iste officia consequatur quasi suscipit<br />
+            id voluptatum sint alias nemo, mollitia tempora quos animi odio.
+          </p>
         </div>
+      </div>
     </div>
-</body>
+    <div class="mid-part">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, voluptates eligendi. Asperiores explicabo, magnam enim sit odit itaque aspernatur voluptates voluptatum repellendus sapiente! Ipsam eveniet, consequuntur eum atque totam aliquid.</p>
+    </div>
+    <div class="bot-part">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, voluptates eligendi. Asperiores explicabo, magnam enim sit odit itaque aspernatur voluptates voluptatum repellendus sapiente! Ipsam eveniet, consequuntur eum atque totam aliquid.</p>
+    </div>
+    <div class="footer">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, voluptates eligendi. Asperiores explicabo, magnam enim sit odit itaque aspernatur voluptates voluptatum repellendus sapiente! Ipsam eveniet, consequuntur eum atque totam aliquid.</p>
+    </div>
+  </body>
 </html>
