--- a/public/website.html
+++ b/public/website.html
@@ -24,8 +24,8 @@
           </div>
         </div>
         <div class="content">
-          <h1>Lorem Ipsum</h1>
-          <h2>Lorem Ipsum Description</h2>
+          <h1>WHO ARE WE?</h1>
+          <h2>We are Team IP</h2>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio<br />
             porro illum velit minus iste officia consequatur quasi suscipit<br />
@@ -35,10 +35,18 @@
       </div>
     </div>
     <div class="mid-part">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, voluptates eligendi. Asperiores explicabo, magnam enim sit odit itaque aspernatur voluptates voluptatum repellendus sapiente! Ipsam eveniet, consequuntur eum atque totam aliquid.</p>
+        <div class="mid-text">
+            <h1>WHERE ARE WE?</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, voluptates eligendi. Asperiores explicabo, magnam enim sit odit itaque aspernatur voluptates voluptatum repellendus sapiente! Ipsam eveniet, consequuntur eum atque totam aliquid.</p>    
+            <img src="Content first.jpg">
+        </div>
     </div>
     <div class="bot-part">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, voluptates eligendi. Asperiores explicabo, magnam enim sit odit itaque aspernatur voluptates voluptatum repellendus sapiente! Ipsam eveniet, consequuntur eum atque totam aliquid.</p>
+        <div class="bot-text">
+            <h1>WE ARE HERE!</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, voluptates eligendi. Asperiores explicabo, magnam enim sit odit itaque aspernatur voluptates voluptatum repellendus sapiente! Ipsam eveniet, consequuntur eum atque totam aliquid.</p>    
+            <img src="Content 1.jpg">
+        </div>
     </div>
     <div class="footer">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, voluptates eligendi. Asperiores explicabo, magnam enim sit odit itaque aspernatur voluptates voluptatum repellendus sapiente! Ipsam eveniet, consequuntur eum atque totam aliquid.</p>
