--- a/public/index.html
+++ b/public/index.html
@@ -3,22 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="assets/css/index.css">
+    <title>NASAN</title>
 </head>
 <body>
-    <div class="drop-down">
-        <div class="test-item">
-            <a href="next.html" class="item">ITEM</a>
-            <div class="drop-items">
-                <p>item</p>
-                <p>item</p>
-                <p>item</p>
-                <p>item</p>
-                <p>item</p>
+    <div class="top-part">
+        <div class="bgpic">
+          <div class="navbar">
+            <div class="headname">
+              <h1>NASAN</h1>
             </div>
+            <div class="menu">
+              <ul>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">NEWS</a></li>
+                <li><a href="#">CONTACT</a></li>
+                <li><a href="#" id="profile">PROFILE</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="content">
+            <h1>WHO ARE WE?</h1>
+            <h2>We are Team IP</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio<br />
+              porro illum velit minus iste officia consequatur quasi suscipit<br />
+              id voluptatum sint alias nemo, mollitia tempora quos animi odio.
+            </p>
+          </div>
         </div>
-    </div>
+      </div>
+      <div class="mid-part">
+          <div class="mid-text">
+              <h1>WHERE ARE WE?</h1>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, voluptates eligendi. Asperiores explicabo, magnam enim sit odit itaque aspernatur voluptates voluptatum repellendus sapiente! Ipsam eveniet, consequuntur eum atque totam aliquid.</p>    
+              <img src="assets/images/Content first.jfif">
+          </div>
+      </div>
+      <div class="bot-part">
+          <div class="bot-text">
+              <h1>WE ARE HERE!</h1>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, voluptates eligendi. Asperiores explicabo, magnam enim sit odit itaque aspernatur voluptates voluptatum repellendus sapiente! Ipsam eveniet, consequuntur eum atque totam aliquid.</p>    
+              <img src="assets/images/Content 1.jpg">
+          </div>
+      </div>
+      <div class="footer">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, voluptates eligendi. Asperiores explicabo, magnam enim sit odit itaque aspernatur voluptates voluptatum repellendus sapiente! Ipsam eveniet, consequuntur eum atque totam aliquid.</p>
+      </div>
+    <img class="account-transition" src="assets/images/account-bg.jpg">
     <script src="assets/js/index.js"></script>
 </body>
 </html>
